tests/ui/suggestions/derive-macro-missing-bounds.stderr
error[E0277]: `&a::Inner<T>` doesn't implement `Debug`
  --> $DIR/derive-macro-missing-bounds.rs:12:21
   |
LL |     #[derive(Debug)]
   |              ----- in this derive macro expansion
LL |     struct Outer<T>(Inner<T>);
   |                     ^^^^^^^^ `&a::Inner<T>` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `&a::Inner<T>`, which is required by `&a::Inner<T>: Debug`
   = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL |     struct Outer<T>(Inner<T>) where &a::Inner<T>: Debug;
   |                               +++++++++++++++++++++++++

error[E0277]: `&c::Inner<T>` doesn't implement `Debug`
  --> $DIR/derive-macro-missing-bounds.rs:41:21
   |
LL |     #[derive(Debug)]
   |              ----- in this derive macro expansion
LL |     struct Outer<T>(Inner<T>);
   |                     ^^^^^^^^ `&c::Inner<T>` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `&c::Inner<T>`, which is required by `&c::Inner<T>: Debug`
   = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL |     struct Outer<T>(Inner<T>) where &c::Inner<T>: Debug;
   |                               +++++++++++++++++++++++++

error[E0277]: `&d::Inner<T>` doesn't implement `Debug`
  --> $DIR/derive-macro-missing-bounds.rs:56:21
   |
LL |     #[derive(Debug)]
   |              ----- in this derive macro expansion
LL |     struct Outer<T>(Inner<T>);
   |                     ^^^^^^^^ `&d::Inner<T>` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `&d::Inner<T>`, which is required by `&d::Inner<T>: Debug`
   = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL |     struct Outer<T>(Inner<T>) where &d::Inner<T>: Debug;
   |                               +++++++++++++++++++++++++

error[E0277]: `&e::Inner<T>` doesn't implement `Debug`
  --> $DIR/derive-macro-missing-bounds.rs:71:21
   |
LL |     #[derive(Debug)]
   |              ----- in this derive macro expansion
LL |     struct Outer<T>(Inner<T>);
   |                     ^^^^^^^^ `&e::Inner<T>` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `&e::Inner<T>`, which is required by `&e::Inner<T>: Debug`
   = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL |     struct Outer<T>(Inner<T>) where &e::Inner<T>: Debug;
   |                               +++++++++++++++++++++++++

error[E0277]: `&f::Inner<T>` doesn't implement `Debug`
  --> $DIR/derive-macro-missing-bounds.rs:86:21
   |
LL |     #[derive(Debug)]
   |              ----- in this derive macro expansion
LL |     struct Outer<T>(Inner<T>);
   |                     ^^^^^^^^ `&f::Inner<T>` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `&f::Inner<T>`, which is required by `&f::Inner<T>: Debug`
   = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL |     struct Outer<T>(Inner<T>) where &f::Inner<T>: Debug;
   |                               +++++++++++++++++++++++++

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0277`.
